--- a/index.html
+++ b/index.html
@@ -15,6 +15,79 @@
 </head>
 
 <body>
+
+  <div class="hero-container">
+  <img src=images/final-banner.png class="hero-image">
+    <div class="overlay">
+      <div class="hero-head">
+    </div>
+  </div>
+  </div>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <span class="nav-logo"><span class="purple"></span></span>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Chapters
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#emerge">Chapter</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#mixtapes">Chapter</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#man">Chapter</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#personal">Chapter</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#demons">Chapter</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#drugs">Chapter</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#new">Chapter</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#album">Chapter</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#death">Chapter</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#life">Chapter</a>
+        </div>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Link
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#flourish">Link</a>
+              <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#map">Link</a>
+                <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#youtube">Link</a>
+          </div>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     Links
+                  </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" <a href="" target="_blank">link</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" <a href="" target="_blank">Link</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" <a href="" target="_blank">Link</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" <a href="" target="_blank">Link</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" <a href="" target="_blank">Link</a>
+              </div>
+
+      </li>
+    </ul>
+  </div>
+  </nav>
+  <!--End NavBar-->
   <div class="container">
   <p class="headline"></p>
   <br>
@@ -23,29 +96,27 @@
   </div>
 
   <div class="container">
-  <div class="quote"> “It’s a radical act to publish women’s writing, and an equally radical act to keep it in print.”
-    <span class="italic1">-Gloria Steinem</span>
+  <div class="quote">“It’s a radical act to publish women’s writing, and an equally radical act to keep it in print.”</div>
+    <span class="italic">-Gloria Steinem</span>
   </div>
+</div>
+
   <div class="container">
 
-  <p class="subhead">A</p>
-  <br>
-  <p class="subhead">
-  <p> t first, Gloria Steinem had remained in the shadows.</p>
-  </p>
-  <p>Her journalism at New York magazine remained subject to criticsm by her male employers.</p>
 
-  <p>.</p>
+  <p class="subhead">
+  <p>At first, Gloria Steinem had remained in the shadows.</p>
+  <p>Her journalism at New York magazine remained subject to criticsm by her male employers.</p>
 
   <p>Speaking to activists and journalists, Steinem realized women were facing serious problems in the mainstream media.</p>
 
   <p><span class="italic">Little did she know the publication she was about to begin would mark the foundation of the feminist press and set the tone for female news coverage for future generations.</span></p><br>
   </div>
-
+</div>
 </body>
 
-
 <footer>Shauneen Miranda © Copyright 2020</footer>
+
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
